<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.inderjit</groupId>
	<artifactId>codetest</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<name>Code Test Maven REST api Product - Order</name>
	<url>http://maven.apache.org</url>

	<repositories>
		<repository>
			<id>maven2-repository.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			<version>1.8</version>
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-servlet</artifactId>
			<version>1.18</version>
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-json</artifactId>
			<version>1.19.4</version>
		</dependency>

		<dependency>
              <groupId>com.sun.jersey.jersey-test-framework</groupId>
              <artifactId>jersey-test-framework-grizzly2</artifactId>
              <version>1.19.4</version>
              <scope>test</scope>
        </dependency>

		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.196</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>CodeTest</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.3</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
<!-- 
			<plugin>
				<groupId>org.codehaus.cargo</groupId>
				<artifactId>cargo-maven2-plugin</artifactId>
				<version>1.7.6</version>
				<configuration>
					<container>
						https://codehaus-cargo.github.io/cargo/Maven2+Plugin+Reference+Guide.html#Maven2PluginReferenceGuide-container
						<containerId>tomcat9x</containerId>
						<type>embedded</type>
					</container>
					<configuration>
						<type>standalone</type>
						<home>${project.build.directory}/tomcat9x</home>
						<properties>
							<cargo.servlet.port>8080</cargo.servlet.port>
							<cargo.logging>high</cargo.logging>
							<cargo.jvmargs>-XX:MaxPermSize=512m -Xms256m
								-Xmx3072m -Xdebug -Xnoagent
								-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
								-XX:+DisableExplicitGC -Xverify:none -Djava.awt.headless=true</cargo.jvmargs>
						</properties>
					</configuration>
					<deployables>
						<deployable>
							<groupId>${project.groupId}</groupId>
							<artifactId>${project.artifactId}</artifactId>
							<type>war</type>
							<properties>
								set the context for your web app so the correct configuration is
								applied
								<context>/dev</context>
							</properties>
						</deployable>
					</deployables>
				</configuration>
			</plugin>
-->
		</plugins>
	</build>

</project>